setup met mooie foto

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hallo
+<!doctype html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Tom's webpagina</title>
+</head>
+<body>
+    <img src="images/intro.png" alt="intro">
+</body>
+</html>
