--- a/Labo4/index.html
+++ b/Labo4/index.html
@@ -8,24 +8,25 @@
     <title>Tom Claus</title>
 </head>
 <body>
-<article>
     <header>
-        <img src="images/intro.png" alt="Tom Claus" width = "200" height = "200">
-        <hgroup>
-            <h1>Tom Claus</h1>
-            <h3>Ambitieus, sportief, creatief.</h3>
-        </hgroup>
+    <img src="images/intro.png" alt="Tom Claus" width = "200" height = "200">
+    <hgroup>
+        <h1>Tom Claus</h1>
+        <h3>Ambitieus, sportief, creatief.</h3>
+    </hgroup>
+    </header>
+<article>
+        <h2>Info</h2>
         <ul>
             <li>Hiddenstreet 5, 8000 Brugge</li>
             <li>04daziedevanier</li>
             <li>mail@phishing.com</li>
         </ul>
-    </header>
 </article>
 <nav>
     <ul>
         <li><a href="hobbys.html">Hobby's</a></li>
-        <li><a href="Likes.html">Likes</a></li>
+        <li><a href="likes.html">Likes</a></li>
     </ul>
 </nav>
 
