--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Tom's webpagina</title>
 </head>
 <body>
-    <img src="images/intro.png" alt="intro">
+    <h1>Labo's</h1>
+    <ol>
+        <li><a href="Labo1/index.html">Labo</a></li>
+        <li><a href="Labo2/index.html">Labo</a></li>
+        <li><a href="Labo3/index.html">Labo</a></li>
+        <li><a href="Labo4/index.html">Labo</a></li>
+        <li><a href="Labo5/index.html">Labo</a></li>
+        <li><a href="Labo6/index.html">Labo</a></li>
+    </ol>
 </body>
 </html>
