Labo 6 opdracht resume

--- a/Labo6/index.html
+++ b/Labo6/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Labo 6</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>Labo6</title>
 </head>
 <body>
-    <ul class="menu">
-        <li><a href="#">products</a></li>
-        <li><a href="#">distributors</a></li>
-        <li><a href="#">contact</a></li>
-    </ul>
+<ul>
+    <li><a href="Opdracht1/index.html">Opdracht1</a></li>
+    <li><a href="Resume/resume.html">Opdracht Resume</a></li>
+</ul>
+
 
 </body>
 </html>
