--- a/Labo6/index.html
+++ b/Labo6/index.html
@@ -10,6 +10,8 @@
     <li><a href="Opdracht1/index.html">Opdracht 1</a></li>
     <li><a href="Resume/resume.html">Opdracht Resume</a></li>
     <li><a href="Opdracht4/index.html">Opdracht 4</a></li>
+    <li><a href="Opdracht5/index.html">Opdracht 5</a></li>
+    <li><a href="Opdracht6/index.html">Opdracht 6</a></li>
 </ul>
 
 
