--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="Labo4/index.html">Labo</a></li>
         <li><a href="Labo5/index.html">Labo</a></li>
         <li><a href="Labo6/index.html">Labo</a></li>
+        <li><a href="Labo7/index.html">Labo</a></li>
     </ol>
 </body>
 </html>
