Labo7 personal homepage met styling

--- a/Labo7/Personal-Homepage/index.html
+++ b/Labo7/Personal-Homepage/index.html
@@ -6,19 +6,20 @@
     <script type="text/javascript" charset="utf-8"
             src="scripts/code.js"></script>
     <title>Tom Claus</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <article>
         <header>
-            <img src="images/tomclaus.png" alt="Tom Claus" width = "200" height = "200">
+            <img class="profielfoto" src="images/tomclaus.png" alt="Tom Claus" width = "200" height = "200">
             <hgroup>
                 <h1>Tom Claus</h1>
                 <h3>Ambitieus, sportief, gedisciplineerd.</h3>
             </hgroup>
             <ul>
-                <li>Stinkstraat 5, 8000 Brugge</li>
+                <li>Oudestraat 32, 8000 Brugge</li>
                 <li>04daziedevanier</li>
-                <li>tomclaus@mail.com</li>
+                <li>tommiewommie@duck.com</li>
             </ul>
         </header>
     </article>
@@ -47,13 +48,13 @@
                             </tr>
                             <tr>
                                 <td>21km</td>
-                                <td>1u39</td>
-                                <td>12,5 km/u</td>
+                                <td>1u37</td>
+                                <td>13 km/u</td>
                             </tr>
                             <tr>
                                 <td>42km</td>
-                                <td>3u42</td>
-                                <td>11,5 km/u</td>
+                                <td>3u24</td>
+                                <td>12,4 km/u</td>
                             </tr>
                         </tbody>
                     </table>
