--- a/Labo7/index.html
+++ b/Labo7/index.html
@@ -8,6 +8,7 @@
 <body>
     <ul>
         <li><a href="Opdracht-NatureBlog/index.html">Opdracht Nature Blog</a></li>
+        <li><a href="Personal-Homepage/index.html">Personal Homepage</a></li>
     </ul>
 </body>
 </html>
