--- a/Labo7/Personal-Homepage/index.html
+++ b/Labo7/Personal-Homepage/index.html
@@ -89,5 +89,48 @@
             </li>
         </ul>
     </section>
+    <section>
+        <h2>Vrienden</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>voornaam</th>
+                    <th>familienaam</th>
+                    <th>Adres</th>
+                    <th>Beroep</th>
+                    <th>Bijnaam</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Steije</td>
+                    <td>Hillewaert</td>
+                    <td>Rooigemlaan 69 9000 Gent</td>
+                    <td>Videoslirk</td>
+                    <td>Dirk</td>
+                </tr>
+                <tr>
+                    <td>Jaime</td>
+                    <td>Warnormier</td>
+                    <td>Roeselarestraat 430 8800 Roeselare</td>
+                    <td class="alt">Meme Historian</td>
+                    <td>Bollepakker</td>
+                </tr>
+                <tr>
+                    <td>Lucas</td>
+                    <td class="alt">Debock</td>
+                    <td>Ergens in Wondelgem aan de McDonalds</td>
+                    <td>Elite Fuckboy</td>
+                    <td>Fuckboy Lucas</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="5">&nbsp;</td>
+                </tr>
+            </tfoot>
+        </table>
+
+    </section>
 </body>
 </html>
