--- a/Labo7/index.html
+++ b/Labo7/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="Opdracht-NatureBlog/index.html">Opdracht Nature Blog</a></li>
         <li><a href="Personal-Homepage/index.html">Personal Homepage</a></li>
+        <li><a href="Kalender/index.html">Kalender</a></li>
     </ul>
 </body>
 </html>
