--- a/Labo9/index.html
+++ b/Labo9/index.html
@@ -8,6 +8,7 @@
 <body>
     <ul>
         <li><a href="positioneren_image/index.html">positioneren_image</a></li>
+        <li><a href="Airbus/airbus.html">Airbus</a></li>
     </ul>
 </body>
 </html>
