--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="Labo6/index.html">Labo</a></li>
         <li><a href="Labo7/index.html">Labo</a></li>
         <li><a href="Labo8/index.html">Labo</a></li>
-        <li><a href="Labo9/index.html"></a></li>
+        <li><a href="Labo9/index.html">Labo</a></li>
     </ol>
 </body>
 </html>
