--- a/Labo10/index.html
+++ b/Labo10/index.html
@@ -8,7 +8,7 @@
 <body>
 <ul>
     <li><a href="Begin_situatie_mediaQueries/oef1.html">Media Querie</a></li>
-    <li><a href="beginsituatie_bootstrap5/index.html">Bootstrap 5</a></li>
+    <li><a href="Oefening1/index.html">Bootstrap 5</a></li>
     <li><a href=""></a></li>
 </ul>
 </body>
