--- a/Labo10/index.html
+++ b/Labo10/index.html
@@ -8,8 +8,9 @@
 <body>
 <ul>
     <li><a href="Begin_situatie_mediaQueries/oef1.html">Media Querie</a></li>
-    <li><a href="Oefening1/index.html">Bootstrap 5</a></li>
-    <li><a href=""></a></li>
+    <li><a href="Oefening1/index.html">Bootstrap 5 - oefening 1</a></li>
+    <li><a href="Oefening2/index.html">Bootstrap 5 - oefening 2</a></li>
+    <li><a href="Mondriaan/index.html">Mondriaan</a></li>
 </ul>
 </body>
 </html>
