--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="Labo7/index.html">Labo</a></li>
         <li><a href="Labo8/index.html">Labo</a></li>
         <li><a href="Labo9/index.html">Labo</a></li>
+        <li><a href="Labo10/index.html">Labo</a></li>
     </ol>
 </body>
 </html>
