--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <li><a href="Labo8/index.html">Labo</a></li>
         <li><a href="Labo9/index.html">Labo</a></li>
         <li><a href="Labo10/index.html">Labo</a></li>
+        <li><a href="Java-les1/index.html">Java les 1</a></li>
+        <li><a href="Java-les2/index.html">Java les 2</a></li>
+        <li><a href="Java-les3/index.html">Java-les 3</a></li>
+        <li><a href="Java-les4/index.html">Java les 4</a></li>
+        <li><a href="Java-les5/index.html">Java les 5</a></li>
     </ol>
 </body>
 </html>
