Java les 5 deel 2

--- a/Java-les5/index.html
+++ b/Java-les5/index.html
@@ -13,6 +13,7 @@
     <li><a href="dehet.html">Opdracht de en het</a></li>
     <li><a href="gemeenten.html">Opdracht gemeenten</a></li>
     <li><a href="formwaarden.html">Opdracht formwaarden</a></li>
+    <li><a href="formvalidatie.html">Opdracht formvalidatie</a></li>
 </ul>
 </body>
 </html>
